@@ -1,3 +1,8 @@
+2005-03-09	Istvan Varga	<istvan@csounds.com>
+	* Engine/insert.c:
+	* OOps/schedule.c:
+	  fixes in schedule opcodes
+
 2005-03-08	Istvan Varga	<istvan@csounds.com>
 	* Engine/insert.c:
 	  MIDIinsert(): allow muting instrument by 'q' score opcode
